Fixed the overlap issue

--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,36 @@
   padding-left: 10px;
 
 }
+
+.legal {
+  font-size: 10px;
+  font-style: italic;
+  margin-top: 300px;
+}
+
+
+
+.psbRight{
+  width:400px;
+  padding: 20px;
+}
+
+.psbLeft{
+  width:400px;
+  padding: 20px;
+}
+
+.content {
+  width:50%;
+  padding:20px;
+}
+
+.leftColumn{
+  float: left;
+  width:500px;
+}
+
+.rightColumn{
+  float: right;
+  width:500px;
+}
